--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
   <script src="lib/angular/angular-animate.js"></script>
   <script src="lib/angular/angular-resource.js"></script>
   <script src="lib/angular/angular-route.js"></script>
-  <script src="lib/angular_ui-bootstrap/ui-bootstrap-tpls-0.10.0.js"></script>
+  <script src="lib/angular-ui/ui-bootstrap-tpls-0.10.0.js"></script>
+  <script src="lib/angular-ui/angular-ui-router.js"></script>
 
   <script src="js/app.js"></script>
   <script src="js/animations.js"></script>
