--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 		<div collapse="ui.menu.isCollapsed">
 			<div class="well well-lg">
 				<ul class="nav nav-pills nav-stacked">
-					<li ng-repeat="item in ui.menu.menuItems"><a href="#/{{item.url}}">{{item.name}}</a></hr></li>
+					<li ng-repeat="item in ui.menu.menuItems"><a ui-sref="{{item.url}}">{{item.name}}</a><hr></li>
 				</ul>
 			</div> 
 		</div>
@@ -40,7 +40,6 @@
 	<div id="tab" ng-controller="UITabController">
 		<tabset>
 			<tab ng-repeat="tab in ui.tabs" heading="{{tab.title}}" active="tab.active" disabled="tab.disabled" select="tab.alertMe()">
-			<div ng-include src="tab.page"></div>
 			</tab>
 
 			<!-- 
@@ -55,10 +54,14 @@
 		</tabset>
 	</div>
 
-			<!-- this works
-	<div class="view-container">
-		<div ng-view class="view-frame"></div>
-	</div>
-	-->
+		<hr>
+		<p>routing?</p>
+		<div ui-view></div>
+		<hr>
+		<!-- this works
+		<div class="view-container">
+			<div ng-view class="view-frame"></div>
+		</div>
+		-->
 	</body>
 </html>
